src/objects/ACET_FAST_CaseItemsFieldSet__mdt.object
<CustomObject>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_API__c</fullName>
        <label>Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <label>ACET_FAST_CaseItemsFieldSet</label>
    <pluralLabel>ACET_FAST_CaseItemsFieldSets</pluralLabel>
</CustomObject>